--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "start http://localhost:4201 & ng serve -port 4201",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,10 +13,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
+    "@angular/common": "^6.0.0",
     "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
     "@angular/http": "^5.2.0",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
@@ -28,7 +28,8 @@
     "@swimlane/ngx-datatable": "^11.2.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
