--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/cidadaofiscal?autoReconnect=true&useSSL=false
-spring.datasource.username=root
+spring.datasource.username=cidadaofiscal
 spring.datasource.password=cidadaofiscal
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
