--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/cidadaofiscal?autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=cidadaofiscal
+spring.datasource.password=smcg050197
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
